--- a/config/default/core.entity_view_display.node.products.default.yml
+++ b/config/default/core.entity_view_display.node.products.default.yml
@@ -4,9 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.node.products.field_btn_product
-    - field.field.node.products.field_cate
+    - field.field.node.products.field_categories_product
     - field.field.node.products.field_img_product
-    - field.field.node.products.field_img_product2
     - field.field.node.products.field_info_product
     - field.field.node.products.field_nam
     - field.field.node.products.field_price_product
@@ -35,17 +34,16 @@ content:
     third_party_settings: {  }
     type: link
     region: content
+  field_categories_product:
+    weight: 9
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_img_product:
     weight: 2
-    label: hidden
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
-  field_img_product2:
-    weight: 6
     label: hidden
     settings:
       image_style: ''
@@ -97,5 +95,4 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  field_cate: true
+hidden: {  }
