--- a/config/default/core.entity_view_display.node.shop.default.yml
+++ b/config/default/core.entity_view_display.node.shop.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.shop.field_category_shop
     - field.field.node.shop.field_d
     - field.field.node.shop.field_img_shop
     - field.field.node.shop.field_info_shop
@@ -10,7 +11,6 @@ dependencies:
     - field.field.node.shop.field_logo_shop
     - field.field.node.shop.field_map_shop
     - field.field.node.shop.field_name_shop
-    - field.field.node.shop.field_shop_category
     - field.field.node.shop.field_shop_contact
     - node.type.shop
   module:
@@ -24,6 +24,14 @@ targetEntityType: node
 bundle: shop
 mode: default
 content:
+  field_category_shop:
+    weight: 9
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_d:
     weight: 8
     label: hidden
@@ -155,5 +163,4 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  field_shop_category: true
+hidden: {  }
