--- a/config/default/views.view.product_in_shop.yml
+++ b/config/default/views.view.product_in_shop.yml
@@ -354,6 +354,7 @@ display:
       use_more: false
       use_more_always: true
       use_more_text: 'See More Products'
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
