config views search shop

--- a/config/default/views.view.search_shop.yml
+++ b/config/default/views.view.search_shop.yml
@@ -430,7 +430,7 @@ display:
           type: image
           settings:
             image_style: medium
-            image_link: ''
+            image_link: content
           group_column: ''
           group_columns: {  }
           group_rows: true
@@ -493,7 +493,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: false
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -824,6 +824,59 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        view_node_1:
+          id: view_node_1
+          table: node
+          field: view_node
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          text: 'Chat Now'
+          output_url_as_text: false
+          absolute: false
+          entity_type: node
+          plugin_id: entity_link
         view_node:
           id: view_node
           table: node
@@ -962,6 +1015,7 @@ display:
         filter_groups: false
         title: false
         pager: false
+        header: false
       filters:
         status:
           value: '1'
@@ -1025,7 +1079,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '='
+          operator: word
           value: ''
           group: 1
           exposed: true
@@ -1129,6 +1183,20 @@ display:
           tags:
             previous: ‹‹
             next: ››
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content:
+            value: 'Our Shop'
+            format: basic_html
+          plugin_id: text
     cache_metadata:
       max-age: -1
       contexts:
