--- a/web/themes/custom/groco/groco.libraries.yml
+++ b/web/themes/custom/groco/groco.libraries.yml
@@ -24,6 +24,7 @@ global-styling:
       css/contactus/breadcrumb.css: {}
       css/contactus/contactuspage.css: {}
       css/search/searchproduct.css: {}
+      css/search/searchshop.css: {}
 
 
 
