--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -26,10 +26,12 @@ module:
   help: 0
   history: 0
   image: 0
+  language: 0
   leaflet: 0
   leaflet_markercluster: 0
   leaflet_views: 0
   link: 0
+  locale: 0
   menu_link_content: 0
   menu_ui: 0
   node: 0
@@ -54,6 +56,7 @@ module:
   views_ui: 0
   webform: 0
   webform_ui: 0
+  content_translation: 10
   views: 10
   paragraphs: 11
   standard: 1000
