--- a/config/default/core.entity_view_display.paragraph.features_content.default.yml
+++ b/config/default/core.entity_view_display.paragraph.features_content.default.yml
@@ -5,12 +5,14 @@ dependencies:
   config:
     - field.field.paragraph.features_content.field_bt
     - field.field.paragraph.features_content.field_cont
+    - field.field.paragraph.features_content.field_content_features
     - field.field.paragraph.features_content.field_img_features
     - field.field.paragraph.features_content.field_title_features_2
     - paragraphs.paragraphs_type.features_content
   module:
     - image
     - link
+    - text
 id: paragraph.features_content.default
 targetEntityType: paragraph
 bundle: features_content
@@ -35,6 +37,13 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_content_features:
+    weight: 4
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_img_features:
     weight: 0
