--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -18,10 +18,14 @@ permissions:
   - 'skip comment approval'
   - 'use text format basic_html'
   - 'view paragraph content banner'
+  - 'view paragraph content banner_about_us'
   - 'view paragraph content blogs'
   - 'view paragraph content categories'
+  - 'view paragraph content contact_info'
   - 'view paragraph content customer'
   - 'view paragraph content customer_content'
   - 'view paragraph content features'
+  - 'view paragraph content features_about_us'
   - 'view paragraph content features_content'
+  - 'view paragraph content features_content_about_us'
   - 'view paragraph content products'
