--- a/config/default/user.role.anonymous.yml
+++ b/config/default/user.role.anonymous.yml
@@ -25,4 +25,6 @@ permissions:
   - 'view paragraph content features_about_us'
   - 'view paragraph content features_content'
   - 'view paragraph content features_content_about_us'
+  - 'view paragraph content our_galery'
+  - 'view paragraph content our_location'
   - 'view paragraph content products'
