install module Pathauto to alias

--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 62ea1dae-d211-4544-b7cc-07a3afee7126
-name: 'My Drupal 8 Site'
+name: 'Groco Shop'
 mail: admin@example.com
 slogan: ''
 page:
