--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/google_map_field": "^1.14",
         "drupal/leaflet": "^2.1",
         "drupal/paragraphs": "^1.12",
+        "drupal/pathauto": "^1.10",
         "drupal/token": "^1.10",
         "drupal/viewfield": "^3.0@beta",
         "drupal/views_field_formatter": "^1.13",
