--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -12,6 +12,7 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -56,6 +57,7 @@ module:
   views_ui: 0
   webform: 0
   webform_ui: 0
+  pathauto: 1
   content_translation: 10
   views: 10
   paragraphs: 11
