overide templates + style page register and forget password

--- a/web/themes/custom/groco/groco.libraries.yml
+++ b/web/themes/custom/groco/groco.libraries.yml
@@ -5,6 +5,7 @@ global-styling:
       # css/bootstrap.css: {}
       css/style.css: {}
       css/menu.css: {}
+      css/register.css: {}
       css/features.css: {}
       css/banner.css: {}
       css/products.css: {}
