install module SMTP and Mail System

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,10 @@
         "drupal/fontawesome": "^2.19",
         "drupal/google_map_field": "^1.14",
         "drupal/leaflet": "^2.1",
+        "drupal/mailsystem": "^4.3",
         "drupal/paragraphs": "^1.12",
         "drupal/pathauto": "^1.10",
+        "drupal/smtp": "^1.0",
         "drupal/token": "^1.10",
         "drupal/viewfield": "^3.0@beta",
         "drupal/views_field_formatter": "^1.13",
