--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -33,6 +33,7 @@ module:
   leaflet_views: 0
   link: 0
   locale: 0
+  mailsystem: 0
   menu_link_content: 0
   menu_ui: 0
   node: 0
@@ -46,6 +47,7 @@ module:
   rsvplist: 0
   search: 0
   shortcut: 0
+  smtp: 0
   system: 0
   taxonomy: 0
   text: 0
