--- a/config/default/mailsystem.settings.yml
+++ b/config/default/mailsystem.settings.yml
@@ -1,6 +1,6 @@
 theme: current
 defaults:
-  sender: php_mail
-  formatter: php_mail
+  sender: SMTPMailSystem
+  formatter: SMTPMailSystem
 _core:
   default_config_hash: IhwTepsVwtbtbcT5GzQKhCXDCRvbk3MNkWqPiuiZ10s
