--- a/config/default/core.entity_view_display.node.products.teaser.yml
+++ b/config/default/core.entity_view_display.node.products.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.products.field_btn_product
     - field.field.node.products.field_categories_product
     - field.field.node.products.field_img_product
+    - field.field.node.products.field_info
     - field.field.node.products.field_info_product
     - field.field.node.products.field_nam
     - field.field.node.products.field_price_product
@@ -29,6 +30,7 @@ hidden:
   field_btn_product: true
   field_categories_product: true
   field_img_product: true
+  field_info: true
   field_info_product: true
   field_nam: true
   field_price_product: true
