--- a/web/themes/custom/groco/groco.libraries.yml
+++ b/web/themes/custom/groco/groco.libraries.yml
@@ -22,6 +22,7 @@ global-styling:
       css/shops/productshop.css: {}
       css/products/productviews.css: {}
       css/products/contactform.css: {}
+      css/products/productsuggest.css: {}
       css/products/product-slide.css: {}
       css/contactus/breadcrumb.css: {}
       css/contactus/contactuspage.css: {}
