--- a/config/default/core.entity_view_display.node.categories.default.yml
+++ b/config/default/core.entity_view_display.node.categories.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.categories.field_img_categories
     - field.field.node.categories.field_name_categories
     - field.field.node.categories.field_s
+    - field.field.node.categories.field_views
     - node.type.categories
   module:
     - image
@@ -53,6 +54,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_views:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   langcode: true
